[gd_scene load_steps=22 format=3 uid="uid://bvww53ocvp08f"]

[ext_resource type="Script" uid="uid://c7npmp7ymnisg" path="res://test_scene.gd" id="1_06caa"]
[ext_resource type="Script" uid="uid://cmgq4iati13gf" path="res://orbit_camera.gd" id="2_bu4di"]
[ext_resource type="Script" uid="uid://dt1gv265myev" path="res://toggle_buttons.gd" id="2_go6nl"]
[ext_resource type="Script" uid="uid://csuqcw0ydrs3i" path="res://shader_controls.gd" id="3_c2eev"]
[ext_resource type="Shader" uid="uid://bd1i7svj72jds" path="res://shaders/ground-grid.gdshader" id="4_qu8g5"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_fhgt6"]
sky_top_color = Color(0.15323, 0.453704, 0.40376, 1)
sky_horizon_color = Color(0.458824, 0.654902, 0.670588, 1)
sky_curve = 0.0512267
ground_horizon_color = Color(0.401092, 0.637029, 0.685976, 1)
ground_curve = 0.0627666
sun_curve = 0.665742

[sub_resource type="Sky" id="Sky_w0a0o"]
sky_material = SubResource("ProceduralSkyMaterial_fhgt6")

[sub_resource type="Environment" id="Environment_jn4bk"]
background_mode = 2
background_color = Color(0.115406, 0.398903, 0.569938, 1)
sky = SubResource("Sky_w0a0o")
ambient_light_source = 3
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 1.85

[sub_resource type="PlaneMesh" id="PlaneMesh_c01et"]
size = Vector2(20, 20)
subdivide_width = 50
subdivide_depth = 50

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b6a7h"]
render_priority = 0
shader = ExtResource("4_qu8g5")
shader_parameter/grid_color = Color(0.458405, 0.458405, 0.458405, 1)
shader_parameter/base_color = Color(0.674815, 0.674815, 0.674815, 1)
shader_parameter/grid_size = 0.1
shader_parameter/line_thickness = 0.997

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uvag2"]
vertex_color_use_as_albedo = true
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="BoxMesh" id="BoxMesh_3psjy"]
size = Vector3(0.25, 0.25, 0.25)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8wjgh"]
transparency = 1
vertex_color_use_as_albedo = true
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_lgos8"]
colors = PackedColorArray(1.54018e-06, 0.826293, 0.838039, 1, 1, 1, 1, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_svp3l"]
vertex_color_use_as_albedo = true
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_w2mp1"]
emission_shape = 1
emission_sphere_radius = 2.0
angle_min = -56.5
angle_max = 61.2
gravity = Vector3(0, 9.8, 0)
color = Color(0.945288, 0.34465, 0.33894, 1)

[sub_resource type="BoxMesh" id="BoxMesh_dp6u7"]
size = Vector3(0.25, 0.25, 0.25)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5iqwb"]
transparency = 1
vertex_color_use_as_albedo = true
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_xxfuo"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.054945), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_f6pm6"]
curve = SubResource("Curve_xxfuo")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ixxhh"]
emission_shape = 1
emission_sphere_radius = 2.0
gravity = Vector3(0, 9.8, 0)
color = Color(0.945288, 0.34465, 0.33894, 1)
alpha_curve = SubResource("CurveTexture_f6pm6")

[node name="TestScene" type="Node3D"]
script = ExtResource("1_06caa")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = -124.0
offset_right = 197.0
offset_bottom = -11.0
grow_vertical = 0
theme_override_constants/separation = 5
metadata/_edit_group_ = true

[node name="FPSLabel" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "FPS: 20"

[node name="PolygonCountLabel" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Poly Count: "

[node name="DrawCallsLabel" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Draw calls"

[node name="ModelCountLabel" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Model count"

[node name="VBoxContainer2" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -187.0
offset_top = 15.0
offset_right = -20.0
offset_bottom = 245.0
grow_horizontal = 0
theme_override_constants/separation = 10
metadata/_edit_group_ = true

[node name="FullScreenButton" type="Button" parent="Control/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
toggle_mode = true
text = "FullScreen Toggle"

[node name="AddModelsButton" type="Button" parent="Control/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Add 10 monkeys"

[node name="RemoveModelsButton" type="Button" parent="Control/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Remove 10 monkeys"

[node name="ShadowsEnableButton" type="Button" parent="Control/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
toggle_mode = true
text = "Toggle Shadows"

[node name="ToggleVSyncButton" type="Button" parent="Control/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
toggle_mode = true
text = "Toggle VSync"

[node name="ToggleContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
offset_left = 19.0
offset_top = 269.0
offset_right = 143.0
offset_bottom = 439.0
theme_override_constants/separation = 10
script = ExtResource("2_go6nl")
metadata/_edit_group_ = true

[node name="ToggleCPUParticlesButton" type="Button" parent="Control/ToggleContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
toggle_mode = true
text = "CPU Particles"

[node name="ToggleGPUParticlesButton" type="Button" parent="Control/ToggleContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
toggle_mode = true
text = "GPU Particles"

[node name="ToggleWorldButton" type="Button" parent="Control/ToggleContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
toggle_mode = true
text = "World Sky"

[node name="ShaderContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 17.0
offset_top = 9.0
offset_right = 161.0
offset_bottom = 221.0
theme_override_constants/separation = 10
script = ExtResource("3_c2eev")
metadata/_edit_group_ = true

[node name="NoshaderButton" type="Button" parent="Control/ShaderContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Basic Shader"

[node name="BasicGridShaderButton" type="Button" parent="Control/ShaderContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Basic Grid Shader"

[node name="NoiseShaderButton" type="Button" parent="Control/ShaderContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Noise Shader"

[node name="TextureShaderButton" type="Button" parent="Control/ShaderContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Texture Shader"

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -228.0
offset_top = -39.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "HTML5 Device Tester"
horizontal_alignment = 1

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 10)
script = ExtResource("2_bu4di")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.533585, 0.845746, 0, -0.845746, -0.533585, 0, 2.99102, 0)
light_energy = 0.3

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_jn4bk")

[node name="GroundPlane" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_c01et")
surface_material_override/0 = SubResource("ShaderMaterial_b6a7h")

[node name="CPUParticleLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.93809, 0.119238, -3.43759)
pixel_size = 0.01
billboard = 1
no_depth_test = true
text = "CPU Particle"

[node name="CPUParticles" type="CPUParticles3D" parent="CPUParticleLabel"]
material_override = SubResource("StandardMaterial3D_uvag2")
amount = 50
mesh = SubResource("BoxMesh_3psjy")
emission_shape = 1
emission_sphere_radius = 2.0
gravity = Vector3(0, 9.8, 0)
color = Color(0.11038, 0.76674, 0.818836, 1)

[node name="CPUParticles2" type="CPUParticles3D" parent="CPUParticleLabel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6.58147)
material_override = SubResource("StandardMaterial3D_8wjgh")
amount = 50
mesh = SubResource("BoxMesh_3psjy")
emission_shape = 1
emission_sphere_radius = 2.0
gravity = Vector3(0, 9.8, 0)
color = Color(0.11038, 0.76674, 0.818836, 1)
color_ramp = SubResource("Gradient_lgos8")

[node name="CPUParticleLabel2" type="Label3D" parent="CPUParticleLabel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6.56145)
pixel_size = 0.01
billboard = 1
no_depth_test = true
text = "CPU Particle w/ Alpha"

[node name="GPUParticlesLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.63094, 0.119238, -3.1733)
pixel_size = 0.01
billboard = 1
no_depth_test = true
text = "GPU Particle"

[node name="GPUParticles3D" type="GPUParticles3D" parent="GPUParticlesLabel"]
material_override = SubResource("StandardMaterial3D_svp3l")
amount = 50
process_material = SubResource("ParticleProcessMaterial_w2mp1")
draw_pass_1 = SubResource("BoxMesh_dp6u7")

[node name="GPUParticles3D2" type="GPUParticles3D" parent="GPUParticlesLabel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6.35589)
material_override = SubResource("StandardMaterial3D_5iqwb")
amount = 50
process_material = SubResource("ParticleProcessMaterial_ixxhh")
draw_pass_1 = SubResource("BoxMesh_dp6u7")

[node name="GPUParticlesLabel2" type="Label3D" parent="GPUParticlesLabel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6.25195)
pixel_size = 0.01
billboard = 1
no_depth_test = true
text = "GPU Particle w/ Alpha"
